--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "buzzboost---ai動画マーケティング",
+  "name": "buzzboost-ai-video-marketing",
+  "version": "1.0.0",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -10,13 +9,14 @@
   },
   "dependencies": {
     "lucide-react": "0.263.1",
-    "react": "^19.2.4",
-    "react-dom": "^19.2.4"
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "@types/react": "18.2.0",
+    "@types/react-dom": "18.2.0",
+    "@vitejs/plugin-react": "^4.0.0",
+    "typescript": "^5.0.0",
+    "vite": "^4.4.0"
   }
 }
